# SeamAwareDecimater

./: .gitmodules  CMakeLists.txt  collapse_edge_seam.cpp  decimate.cpp  pythonlike.h
cmake/: FindEIGEN.cmake
